refactor: fix confusing code